--- a/code/规则判断（整理后版本.md
+++ b/code/规则判断（整理后版本.md
@@ -4,13 +4,13 @@
 
 | 末音节重音                                    | 倒数第二音节                                   | 倒数第三音节                                   |
 | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- |
-| 后缀 -ade -eer -ese - esque                | 后缀 -ic -ion -ana - escence -escent -i -ics -itis -id | 最重要的后缀 -ial -ous -ity -ian -ance -ancy -ence -ency -ant -ent -logy -nomy -ical -ous(-acious -aneous -eous -ious)  -ian(-arian -ician) -ity(acity, aneity, bility, ility, uity) |
-| 后缀 -ade -ain -ee -eer -esque -ette -ique -ine -oon | 后缀 -eous -ial -ian -ic -ics - ient -ion -ious -ish -it -liar -sive -tal -uous | 弱读后缀: -able(或-ible) -ary -ery -ory重音在倒数第四音节 如negligible ordinary contemporary abversary monastery conservatory |
-|                                          | -ic -ics结尾 有一个例外: rhetoric在倒数第三          | -ment做后缀，往往在倒三音节，如果其后有词缀，重音遵循词缀。不遵循-ment |
-|                                          | -al -ial结尾                               |                                          |
-|                                          | -tarian结尾                                |                                          |
-|                                          | -sis结尾                                   |                                          |
-|                                          | -ence -ent结尾 （部分情况下）                     |                                          |
+| 后缀 -ade -ain -eer -ese - esque -ette -ique -ine -oon | 后缀 -ic -ion -ana - escence -escent -i -ics -itis -id -eous -ial -ian -ient -ion -ious -ish -it -liar -sive -tal -uous -al -tarian -sis -ence -ent | 最重要的后缀 -ous -ity -ian -ance -ancy -ence -ency -ant -ent -logy -nomy -ical -ous(-acious -aneous -eous -ious)  -ian(-arian -ician) -ity(acity, aneity, bility, ility, uity) |
+|                                          | 有一个例外: rhetoric在倒数第三                     | 弱读后缀: -able(或-ible) -ary -ery -ory重音在倒数第四音节 如negligible ordinary contemporary abversary monastery conservatory |
+|                                          |                                          | -ment做后缀，往往在倒三音节，如果其后有词缀，重音遵循词缀。不遵循-ment |
+|                                          |                                          |                                          |
+|                                          |                                          |                                          |
+|                                          |                                          |                                          |
+|                                          |                                          |                                          |
 
 
 
