--- a/code/规则判断（整理后版本.md
+++ b/code/规则判断（整理后版本.md
@@ -5,8 +5,8 @@
 | 末音节重音                                    | 倒数第二音节                                   | 倒数第三音节                                   |
 | ---------------------------------------- | ---------------------------------------- | ---------------------------------------- |
 | 后缀 -ade -ain -eer -ese - esque -ette -ique -ine -oon | 后缀 -ic -ion -ana - escence -escent -i -ics -itis -id -eous -ial -ian -ient -ion -ious -ish -it -liar -sive -tal -uous -al -tarian -sis -ence -ent | 最重要的后缀 -ous -ity -ian -ance -ancy -ence -ency -ant -ent -logy -nomy -ical -ous(-acious -aneous -eous -ious)  -ian(-arian -ician) -ity(acity, aneity, bility, ility, uity) |
-|                                          | 有一个例外: rhetoric在倒数第三                     | 弱读后缀: -able(或-ible) -ary -ery -ory重音在倒数第四音节 如negligible ordinary contemporary abversary monastery conservatory |
-|                                          |                                          | -ment做后缀，往往在倒三音节，如果其后有词缀，重音遵循词缀。不遵循-ment |
+| 重音落到最后的词缀(即最后音节，词缀本身)：-ade, -ette, -ee, -ese, -eque, aar, eer, zee, roo, 这些词一般都是从法语中借来的词，双音节词也是同样的规律。 | 有一个例外: rhetoric在倒数第三                     | 弱读后缀: -able(或-ible) -ary -ery -ory重音在倒数第四音节 如negligible ordinary contemporary abversary monastery conservatory |
+|                                          |                                          | -ia -arium -cracy -crat -graphy -ile -tude |
 |                                          |                                          |                                          |
 |                                          |                                          |                                          |
 |                                          |                                          |                                          |
@@ -19,4 +19,4 @@
 | 第一音节                                     | 第二音节                                     |
 | ---------------------------------------- | ---------------------------------------- |
 | 后缀 -ary -ery -ory -ism -ist -mony -ment  | 前缀 a- ab- ac- ad- al- be- con- de- dis- em- en- in- mis- re- tans- un- |
-| Original, personal, residual, adjectival, anecdotal. Customary, scientist, slavery,advertise, message. | 后缀 -aim -ain -cur -eem -duce -ere -firm -gn -oin -oke -ose -pt -rce -self -ume |
+| Original, personal, residual, adjectival, anecdotal. Customary, scientist, slavery,advertise, message. | 带以下后缀的**双音节**词 -aim -ain -cur -eem -duce -ere -firm -gn -oin -oke -ose -pt -rce -self -ume |
